--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -26,7 +26,7 @@ tasks:
   start:
     desc: start the wordpress stack
     cmds:
-      - docker compose up {{if .CLI_ARGS}} -d {{else}} {{end}} mariadb phpmyadmin php nginx
+      - docker compose up {{if .CLI_ARGS}} -d {{else}} {{end}} mariadb phpmyadmin wp-site nginx
     deps:
       - dotenv
 
@@ -34,6 +34,11 @@ tasks:
     desc: stop the wordpress stack
     cmds:
       - docker compose stop {{.CLI_ARGS}}
+
+  down:
+    desc: destroy the wordpress stack
+    cmds:
+      - docker compose down {{.CLI_ARGS}}
 
   build:
     desc: build the containers
@@ -54,9 +59,11 @@ tasks:
       - docker compose up -d mariadb
       # Wait for MariaDB to be healthy
       - docker compose run --rm wait-for-it mariadb:3306 -t 60 
-      - docker compose run --rm wp core download
-      - docker compose run --rm wp config create --dbname=${MYSQL_DATABASE} --dbuser=${MYSQL_USER} --dbpass=${MYSQL_PASSWORD} --dbhost=${WORDPRESS_DB_HOST} --dbprefix=${WORDPRESS_TABLE_PREFIX}
-      - docker compose run --rm wp core install --url=https://localhost --title=WordPressStack --admin_user=${WORDPRESS_USER} --admin_password=${WORDPRESS_PASSWORD} --admin_email=${WORDPRESS_EMAIL}
+      - docker compose run --rm wp-cli core download
+      - docker compose run --rm wp-cli config create --dbname=${MYSQL_DATABASE} --dbuser=${MYSQL_USER} --dbpass=${MYSQL_PASSWORD} --dbhost=${WORDPRESS_DB_HOST} --dbprefix=${WORDPRESS_TABLE_PREFIX}
+      - docker compose run --rm wp-cli config set FORCE_SSL_ADMIN false --raw
+      - docker compose run --rm wp-cli config set FORCE_SSL_USER false --raw
+      - docker compose run --rm wp-cli core install --url=http://localhost --title=WordPressStack --admin_user=${WORDPRESS_USER} --admin_password=${WORDPRESS_PASSWORD} --admin_email=${WORDPRESS_EMAIL}
       - docker compose stop mariadb
     deps:
       - dotenv
