--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,24 +1,31 @@
-upstream php {
+upstream wordpress {
     server unix:/tmp/php-cgi.socket;
-    server php:9000;
+    server wp-site:9000;
 }
  
 server {
     listen 80;
-    server_name wordpress-docker.test;
+    listen [::]:80;
+    access_log off;
+    server_tokens off;
+
+    server_name localhost;
  
     root /var/www/html;
  
     index index.php;
  
     location / {
+        # First attempt to serve request as file, then
+        # as directory, then fall back to displaying a 404.
         try_files $uri $uri/ /index.php?$args;
     }
- 
+
+    # pass the PHP scripts to FastCGI server listening on wp-site:9000
     location ~ \.php$ {
         include fastcgi.conf;
         fastcgi_intercept_errors on;
-        fastcgi_pass php;
+        fastcgi_pass wordpress;
     }
  
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
